--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,68 +1,36 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) 2020 STMicroelectronics
 
-name: libmetal Continuous Integration
+name: OpenAMP sysref CI
 
 on:
-  push:
-    branches: [ main ]
-    paths-ignore:
-      - docs/**
-      - cmake/**
-      - scripts/**
-  pull_request:
-    branches: [ main ]
-    paths-ignore:
-      - docs/**
-      - cmake/**
-      - scripts/**
+  workflow_dispatch:
 
 jobs:
   platform_builds:
     name: check builds on different platforms
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: build for Linux
-      id: build_linux
-      uses: ./.github/actions/build_ci
+
+    # get the action code
+    - uses: actions/checkout@v4
       with:
-        target: linux
-    - name: build for generic arm
-      id: build_generic
-      uses: ./.github/actions/build_ci
+        sparse-checkout: |
+          .github
+
+    # now checkout the whole repo as a dir under "top"
+    - uses: actions/checkout@v4
       with:
-        target: generic
-    - name: build for FreeRTOS
-      id: build_freertos
-      uses: ./.github/actions/build_ci
-      with:
-        target: freertos
+        path: top/openamp-system-reference
+
+    - name: info
+      run: |
+        pwd
+        find -type d -ls
+
     - name: build for Zephyr
       id: build_Zephyr
       uses: ./.github/actions/build_ci
       with:
         target: zephyr
 
-  nr_tests:
-    name: nonreg tests
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: configure
-      run: |
-        sudo apt-get update && sudo apt-get install libsysfs-dev
-        cmake . -Bbuild
-    - name: build
-      run: |
-        cd build
-        make
-    - name: execute test
-      run: |
-        cd build
-        make test
-    - name: test logs
-      if: failure()
-      run: |
-        cat build/Testing/Temporary/LastTest.log
-        exit 1
